tests/ui/structs/suggest-private-fields.stderr
error[E0560]: struct `B` has no field named `aa`
  --> $DIR/suggest-private-fields.rs:15:9
   |
LL |         aa: 20,
   |         ^^ unknown field
   |
help: a field with a similar name exists
   |
LL -         aa: 20,
LL +         a: 20,
   |

error[E0560]: struct `B` has no field named `bb`
  --> $DIR/suggest-private-fields.rs:17:9
   |
LL |         bb: 20,
   |         ^^
   |
help: initializer expressions cannot construct structs with private fields
  --> $DIR/suggest-private-fields.rs:14:13
   |
LL |       let k = B {
   |  _____________^
LL | |         aa: 20,
LL | |
LL | |         bb: 20,
LL | |
LL | |     };
   | |_____^

error[E0560]: struct `A` has no field named `aa`
  --> $DIR/suggest-private-fields.rs:22:9
   |
LL |         aa: 20,
   |         ^^ unknown field
   |
help: a field with a similar name exists
   |
LL -         aa: 20,
LL +         a: 20,
   |

error[E0560]: struct `A` has no field named `bb`
  --> $DIR/suggest-private-fields.rs:24:9
   |
LL |         bb: 20,
   |         ^^ unknown field
   |
help: a field with a similar name exists
   |
LL -         bb: 20,
LL +         b: 20,
   |

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0560`.
